# tesla-can-controller

./: LICENSE
tesla-can-controller/: README.md
tesla-can-controller/docs/: architecture.md  hardware_spec.md  protocol_spec.md  software_design.md
tesla-can-controller/software/firmware/device_a_m5dial/: CMakeLists.txt
tesla-can-controller/software/firmware/device_a_m5dial/include/: ui_manager.h
tesla-can-controller/software/firmware/device_a_m5dial/src/: main.c
tesla-can-controller/software/firmware/device_b_can_reader/: CMakeLists.txt
tesla-can-controller/software/firmware/device_b_can_reader/src/: main.c
tesla-can-controller/software/firmware/device_c_ambilight/: CMakeLists.txt
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/: CHANGELOG.md  DEPLOYMENT.md  README.md  sdkconfig.defaults
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/components/ble_reassembler/: CMakeLists.txt  ble_reassembler.cpp
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/components/ble_reassembler/include/: ble_reassembler.h
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/components/message_scheduler/: CMakeLists.txt  message_scheduler.cpp
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/components/message_scheduler/include/: message_scheduler.h
tesla-can-controller/tesla-vehicle-command-main/tesla-vehicle-command-main/tesla-vehicle-command-main/examples/m5dial-idf/main/: app_main.cpp  storage.cpp
tesla-can-controller/tools/: setup_dev_env.sh
tesla-can-controller/tools/can_logger/: can_logger.py
